--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  "coc.preferences.jumpCommand": "vsplit",
   "coc.preferences.formatOnSaveFiletypes": ["*"],
   "coc.preferences.enableMessageDialog": false
 }
