--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,27 @@
+unbind r
+bind r source-file ~/.tmux.conf
 set -g default-terminal "xterm-256color"
 
-set-window-option -g mode-keys vi
+set -g prefix C-s
+
+# use vim navigation keys
+setw -g mode-keys vi
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+# set terminal title
+set -g set-titles-string '#{pane_title}'
+
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+
+# tpm packages
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
