--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -11,7 +11,10 @@
 #import:
 #  - /path/to/alacritty.yml
 import:
- - ~/.config/alacritty/themes/themes/tokyo-night.yaml
+ # - ~/.config/alacritty/themes/themes/tokyo-night.yaml
+ - ~/.config/alacritty/themes/themes/gotham.yaml
+ # - ~/.config/alacritty/themes/themes/iterm.yaml
+ # - ~/.config/alacritty/themes/themes/midnight-haze.yaml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
