--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,23 +1,47 @@
 unbind r
 bind r source-file ~/.tmux.conf
 set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set -g prefix C-s
+set -g prefix C-a
 
 # use vim navigation keys
 setw -g mode-keys vi
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+
+# use vim like for next window
+bind -n C-S-H previous-window
+bind -n C-S-L next-window
+
+# split panes
+bind -n C-S-G split-window -h -c '#{pane_current_path}'  # Split panes horizontal
+bind -n C-S-B split-window -v -c '#{pane_current_path}'  # Split panes vertically
+
+# bind leader + hjkl to swap pane, ! is last pane
+bind C-h swap-pane -s '{left-of}'   \; select-pane -L
+bind C-l swap-pane -s '{left-of}'   \; select-pane -R
+bind C-j swap-pane -s '{down-of}'   \; select-pane -D
+bind C-k swap-pane -s '{up-of}'     \; select-pane -U
+
+# remap new window
+bind -n C-S-N new-window -c '#{pane_current_path}'
+
+# remap close window and close pane
+bind -n C-x killp
+bind -n C-S-X killw
+
+# enter copy mode
+bind -n C-S-C copy-mode
 
 # set terminal title
 set -g set-titles-string '#{pane_title}'
 
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi V send -X select-line
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi V send -X select-line
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
 
 # tpm packages
 set -g @plugin 'tmux-plugins/tpm'
@@ -25,3 +49,6 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# fast escape for vim
+set -sg escape-time 0
