finish vim-i3 like key bindings for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,9 +18,18 @@ bind -n C-S-B split-window -v -c '#{pane_current_path}'  # Split panes verticall
 
 # bind leader + hjkl to swap pane, ! is last pane
 bind C-h swap-pane -s '{left-of}'   \; select-pane -L
-bind C-l swap-pane -s '{left-of}'   \; select-pane -R
+bind C-l swap-pane -s '{right-of}'  \; select-pane -R
 bind C-j swap-pane -s '{down-of}'   \; select-pane -D
 bind C-k swap-pane -s '{up-of}'     \; select-pane -U
+
+# bind leader + yuio to 
+bind -r C-y resize-pane -L 10
+bind -r C-o resize-pane -R 10
+bind -r C-u resize-pane -D 5
+bind -r C-i resize-pane -U 5 
+
+# i3 like rotate clockwise
+bind C-t if-shell -F '#{pane_at_top}' {if-shell -F '#{pane_at_left}'   {} { move-pane -v -s '{left-of}'; swap-pane -d -s '{up-of}'; }} { move-pane -h -s '{down-of}'; swap-pane -d -s '{left-of}'; }
 
 # remap new window
 bind -n C-S-N new-window -c '#{pane_current_path}'
