--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,11 @@ setw -g pane-base-index 1
 # tpm packages
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'dracula/tmux'
+
+set -g @dracula-show-powerline true
+set -g @dracula-show-flag true
+set -g status-position top
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
