--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,6 +42,7 @@ bind -n C-S-X killw
 bind -n C-S-C copy-mode
 
 # set terminal title
+set-option -g set-titles on
 set -g set-titles-string '#{pane_title}'
 
 bind -T copy-mode-vi v send -X begin-selection
@@ -56,10 +57,13 @@ setw -g pane-base-index 1
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'dracula/spotify-tui'
 
 set -g @dracula-show-powerline true
 set -g @dracula-show-flag true
 set -g status-position top
+set -g @dracula-show-left-icon session
+# set -g @dracula-plugins "spotify-tui"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
