--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,10 +71,12 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 
-set -g @dracula-show-powerline true
+set -g @dracula-plugins "cpu-usage ram-usage weather"
+
 set -g @dracula-show-flag true
 set -g status-position top
 set -g @dracula-show-left-icon session
+set -g @dracula-show-powerline true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
