--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ unbind r
 bind r source-file ~/.tmux.conf
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga update-environment 'CONDA_DEFAULT_ENV'
 
 set -g prefix C-a
 
@@ -78,8 +79,9 @@ set -g status-position top
 set -g @dracula-show-left-icon session
 set -g @dracula-show-powerline true
 
+# fast escape for vim
+set -sg escape-time 0
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-# fast escape for vim
-set -sg escape-time 0
