--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,8 @@
 unbind r
 bind r source-file ~/.tmux.conf
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -ga update-environment 'CONDA_DEFAULT_ENV'
 
 set -g prefix C-a
