--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -89,13 +89,16 @@ bar {
 # default workspaces
 assign [class="Spotify"] $ws5
 assign [class="discord"] $ws5
+assign [class="Slack"] $ws5
 
 # set default terminal
 # set $term i3-sensible-terminal
 set $term alacritty -e tmux
+set $term_ntmux alacritty
 
 # start a terminal
 bindsym $mod+Return exec $term
+bindsym $mod+Shift+Return exec $term_ntmux
 
 # open ranger
 bindsym $mod+r exec $term new "bash -c ranger"
@@ -209,8 +212,8 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-set $monitor_left "HDMI-0"
-set $monitor_right "HDMI-0"
+set $monitor_left "eDP1"
+set $monitor_right "DP3"
 
 #assign workspace to monitor
 workspace $ws1 output $monitor_left
@@ -259,9 +262,7 @@ bindsym $mod+x exec i3lock --color 475263
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+x exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-exec --no-startup-id "xrandr --dpi 100; i3-msg reload"
-exec --no-startup-id udiskie
-exec --no-startup-id fcitx5
+exec --no-startup-id xrandr --output $monitor_left --primary --mode 1600x900 --pos 0x0 --rotate normal 
 
 bindsym $mod+m exec --no-startup-id "xrandr --output 'eDP1' --primary --mode '1600x900' --pos '0x0' --rotate normal; feh --bg-scale ~/Pictures/Wallpaper.jpg"
 
@@ -269,11 +270,12 @@ bindsym $mod+n exec --no-startup-id "xrandr --output 'eDP1' --primary --mode 160
 
 exec_always --no-startup-id feh --bg-scale ~/Pictures/Wallpaper.jpg
 exec_always --no-startup-id dunst
+exec --no-startup-id udiskie
+exec --no-startup-id fcitx5
 exec_always --no-startup-id setxkbmap -option caps:escape
+exec_always --no-startup-id picom --backend xrender --vsync --config /dev/null --fade-in-step=1 --fade-out-step=1 --fade-delta=0
 
 exec --no-startup-id i3-msg 'workspace 1; exec alacritty -e tmux; exec sleep 2; workspace 2; exec firefox'
-
-exec_always --no-startup-id picom --backend xrender --vsync --config /dev/null --fade-in-step=1 --fade-out-step=1 --fade-delta=0
 
 # screenshot
 bindsym Print exec --no-startup-id maim -s --format=png "$HOME/Pictures/Screenshots/screenshot-$(date -u +'%Y%m%d-%H%M%SZ').png"
