--- a/mouseless/config.yaml
+++ b/mouseless/config.yaml
@@ -1,5 +1,7 @@
 # the keyboard devices it reads from, if no devices are specified, it reads from all
 devices:
+- "/dev/input/by-path/platform-i8042-serio-0-event-kbd"
+- "/dev/input/by-id/usb-CHERRY_Mechanical_Keyboard-event-kbd"
 # - "/dev/input/by-id/SOME_KEYBOARD_REPLACE_ME-event-kbd"
 
 # this is executed when mouseless starts, e.g. useful for setting the keyboard layout
