--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".tmux/plugins/tmux"]
 	path = .tmux/plugins/tmux
 	url = https://github.com/dracula/tmux
+[submodule "themes"]
+	path = alacritty/themes
+	url = https://github.com/alacritty/alacritty-theme
