--- a/mouseless/config.yaml
+++ b/mouseless/config.yaml
@@ -13,7 +13,7 @@ baseScrollSpeed: 20.0
 
 # the time it takes to accelerate to baseMouseSpeed (in ms), 0 to reach top speed immediately
 mouseAccelerationTime: 200.0
-# the shape of the acceleration curve, 1.0 is linear, higher values have more time at low speeds
+# the shape of the accelehation curve, 1.0 is linear, higher values have more time at low speeds
 mouseAccelerationCurve: 2.0
 # speed of the mouse when it starts moving
 startMouseSpeed: 0.0
@@ -37,7 +37,7 @@ layers:
   passThrough: true
   bindings:
     # quit mouse layer
-    q: layer initial
+    e: layer initial
     # keep the mouse layer active
     space: layer mouse
     r: reload-config
@@ -51,7 +51,7 @@ layers:
     o: scroll right
     w: speed 4.0
     leftalt: speed 0.3
-    c: speed 0.1
+    x: speed 0.1
     d: button left
     s: button middle
     f: button right
