--- a/mouseless/config.yaml
+++ b/mouseless/config.yaml
@@ -2,6 +2,7 @@
 devices:
 - "/dev/input/by-path/platform-i8042-serio-0-event-kbd"
 - "/dev/input/by-id/usb-CHERRY_Mechanical_Keyboard-event-kbd"
+- "/dev/input/by-id/usb-LiteOn_Lenovo_Traditional_USB_Keyboard-event-kbd"
 # - "/dev/input/by-id/SOME_KEYBOARD_REPLACE_ME-event-kbd"
 
 # this is executed when mouseless starts, e.g. useful for setting the keyboard layout
