Update sound control

--- a/i3/config
+++ b/i3/config
@@ -245,16 +245,16 @@ bindsym $mod+o resize grow width 10 px or 10 ppt
 
 # Media volume controls
 bindsym XF86AudioMute exec amixer sset 'Master' toggle
-bindsym XF86AudioLowerVolume exec amixer sset 'Master' 5%-
-bindsym XF86AudioRaiseVolume exec amixer sset 'Master' 5%+ 
+# bindsym XF86AudioLowerVolume exec amixer sset 'Master' 5%-
+# bindsym XF86AudioRaiseVolume exec amixer sset 'Master' 5%+ 
+bindsym XF86AudioLowerVolume exec --no-startup-id python ~/.config/i3/scripts/interface.py --interface sound --sub
+bindsym XF86AudioRaiseVolume exec --no-startup-id python ~/.config/i3/scripts/interface.py --interface sound --add
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # Brightness control
-# bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
-# bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 bindsym XF86MonBrightnessUp exec --no-startup-id python ~/.config/i3/scripts/interface.py --interface brightness --add
 bindsym XF86MonBrightnessDown exec --no-startup-id python ~/.config/i3/scripts/interface.py --interface brightness --sub
 
