Add tab for mouseless

--- a/mouseless/config.yaml
+++ b/mouseless/config.yaml
@@ -40,6 +40,8 @@ layers:
   bindings:
     # quit mouse layer
     e: layer initial
+    # tab
+    q: tab
     # keep the mouse layer active
     space: layer mouse
     r: reload-config
